test/sema/traits/trait_specifier_invalid_type.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:5: error: failed to resolve type 'Error'
  @<Error impl A>::foo;
}
